@@ -509,6 +509,18 @@ to &lt;javadoc&gt; using <tt>classpath</tt>, <tt>classpathref</tt> attributes or
     <td align="center" valign="top">1.4</td>
     <td align="center" valign="top">No</td>
   </tr>
+  <tr>
+    <td valign="top">postProcessGeneratedJavadocs</td>
+    <td valign="top">Whether to post-process the generated javadocs in
+    order to mitigate CVE-2013-1571.  Defaults to true.  <em>Since Ant
+    1.9.2</em><br></td>
+    There is a frame injection attack possible in javadocs generated by Oracle
+    JDKs prior to Java7 Update 25.  When this flag is set to true, Ant
+    will check whether the docs are vulnerable and will try to fix them.
+    </td>
+    <td align="center" valign="top">1.4</td>
+    <td align="center" valign="top">No</td>
+  </tr>
 </table>
 
 <h4><a name="groupattribute">Format of the group attribute</a></h4>
