@@ -23,6 +23,15 @@ Fixed bugs:
 Other changes:
 --------------
 
+ * <javadoc> will now post-process the generated in order to mitigate
+   the frame injection attack possible in javadocs generated by Oracle
+   JDKs prior to Java7 Update 25.  The vulnerability is known as
+   CVE-2013-1571.
+   There is an option to turn off the post-processing but it is only
+   recommended you do so if all your builds use a JDK that's not
+   vulnerable.
+   Bugzilla Report 55132.
+
 Changes from Ant 1.9.0 TO Ant 1.9.1
 ===================================
 
